--- a/vue-passproject/package.json
+++ b/vue-passproject/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "install": "^0.13.0",
     "pinia": "^2.2.6",
