--- a/.gitignore
+++ b/.gitignore
@@ -425,3 +425,4 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,windows,macos,maven,intellij,intellij+iml,intellij+all,gradle,eclipse
+node_modules
